--- a/src/i18n/locales/zh-TW.json
+++ b/src/i18n/locales/zh-TW.json
@@ -5,7 +5,26 @@
   "nav": {
     "flasher": "刷寫工具",
     "firmware": "固件中心",
+    "dumper": "韌體提取工具",
+    "utilities": "韌體高級工具",
     "settings": "設置"
+  },
+  "utilities": {
+    "analyzer": "韌體分析器",
+    "partition_editor": "分割表編輯器",
+    "btn_analyze": "分析",
+    "btn_export": "導出",
+    "btn_import": "導入",
+    "partition_table": "分割表",
+    "raw_data": "原始分析數據",
+    "detected_chip": "檢測到的芯片",
+    "flash_info": "Flash 信息",
+    "image_type": "鏡像類型",
+    "full_image": "完整鏡像 (合併)",
+    "app_image": "App / 部分鏡像",
+    "no_partitions": "未檢測到分割表。",
+    "analysis_failed": "分析失敗",
+    "select_firmware": "點擊選擇韌體 .bin"
   },
   "settings": {
     "title": "設置",
@@ -20,6 +39,8 @@
   },
   "flasher": {
     "welcome": "歡迎使用 LILYGO Spark！",
+    "mode_basic": "基礎模式",
+    "mode_advanced": "專業模式",
     "select_port_msg": "選擇串口",
     "label_port": "端口",
     "label_chip": "芯片系列",
