--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -35,6 +35,12 @@
       "zh-CN": "简体中文",
       "zh-TW": "繁體中文",
       "ja": "日本語"
+    },
+    "theme": "テーマ",
+    "theme_options": {
+      "system": "システムに従う",
+      "light": "ライト",
+      "dark": "ダーク"
     }
   },
   "burner": {
