--- a/src/i18n/locales/zh-TW.json
+++ b/src/i18n/locales/zh-TW.json
@@ -35,6 +35,12 @@
       "zh-CN": "简体中文",
       "zh-TW": "繁體中文",
       "ja": "日本語"
+    },
+    "theme": "主題",
+    "theme_options": {
+      "system": "跟隨系統",
+      "light": "淺色",
+      "dark": "深色"
     }
   },
   "burner": {
