Update electron to 40 and fix styles

--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -6,6 +6,7 @@
     "burner": "書き込みツール",
     "firmware": "ファームウェア",
     "dumper": "ファームウェア抽出",
+    "upload": "アップロード",
     "utilities": "ユーティリティ",
     "settings": "設定"
   },
