--- a/src/i18n/locales/zh-TW.json
+++ b/src/i18n/locales/zh-TW.json
@@ -6,6 +6,7 @@
     "burner": "刷寫工具",
     "firmware": "固件中心",
     "dumper": "韌體提取工具",
+    "upload": "韌體上傳",
     "utilities": "韌體高級工具",
     "settings": "設置"
   },
