--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -8,7 +8,22 @@
     "dumper": "ファームウェア抽出",
     "upload": "アップロード",
     "utilities": "ユーティリティ",
-    "settings": "設定"
+    "settings": "設定",
+    "community": "LILYGO コミュニティ",
+    "lilygo_related": "LILYGO 関連"
+  },
+  "community": {
+    "title": "LILYGO 関連",
+    "subtitle": "公式サイト、GitHub、Wiki、淘宝、AliExpress、コミュニティ",
+    "open_external": "ブラウザで開く",
+    "links": {
+      "official": "LILYGO 公式サイト",
+      "github": "LILYGO GitHub",
+      "wiki": "LILYGO Wiki",
+      "taobao": "LILYGO 淘宝店",
+      "aliexpress": "LILYGO AliExpress ストア",
+      "community": "LILYGO コミュニティフォーラム"
+    }
   },
   "utilities": {
     "analyzer": "ファームウェア分析",
