Add more colors

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -45,7 +45,10 @@
         "accent_options": {
             "blue": "Blue",
             "orange": "Orange",
+            "amber": "Amber",
             "emerald": "Emerald",
+            "cyan": "Cyan",
+            "sky": "Sky",
             "violet": "Violet",
             "rose": "Rose"
         },
