--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -2,15 +2,53 @@
   "app": {
     "title": "LILYGO Spark"
   },
+  "sidebar": {
+    "logout": "ログアウト",
+    "login_with_github": "GitHubでログイン",
+    "login_to_upload": "ログインで解禁",
+    "login_to_upload_tooltip": "ログイン後にアップロードなど利用可"
+  },
   "nav": {
+    "guide": "ガイド",
     "burner": "書き込みツール",
     "firmware": "ファームウェア",
     "dumper": "ファームウェア抽出",
     "upload": "アップロード",
     "utilities": "ユーティリティ",
+    "firmware_toolbox": "ファームウェアツールボックス",
+    "serial_tools": "シリアルツール",
+    "convert_tools": "画像・変換",
     "settings": "設定",
     "community": "LILYGO コミュニティ",
     "lilygo_related": "LILYGO 関連"
+  },
+  "guide": {
+    "title": "ユーザーガイド",
+    "subtitle": "LILYGO Spark の目的とクイックスタート",
+    "purpose_title": "製品の目的",
+    "purpose_text": "LILYGO Spark は LILYGO およびその他の ESP デバイス向けのクロスプラットフォームファームウェアハブと書き込みツールです。開発者、メイカー、愛好家が公式またはコミュニティファームウェアを簡単に閲覧、ダウンロード、書き込みできるようにします。",
+    "purpose_1": "ESP32、ESP32-S3、ESP32-C6 などの Espressif チップをサポート",
+    "purpose_2": "LILYGO 公式・コミュニティファームウェアを一括で閲覧・ダウンロード",
+    "purpose_3": "Windows、macOS、Linux でクロスプラットフォーム対応、自動ボード検出",
+    "quick_start_title": "クイックスタート",
+    "step1_title": "ファームウェアセンター — 製品とファームウェアを選択",
+    "step1_desc": "左側で LILYGO デバイスを選択し、公式またはコミュニティファームウェアを閲覧、ダウンロードして直接書き込み。",
+    "step2_title": "Burner — 接続して書き込み",
+    "step2_desc": "USB でボードを接続し、シリアルポートを選択、.bin ファームウェアを選択して「書き込み開始」をクリック。",
+    "features_title": "機能",
+    "feature_firmware": "製品フィルター付きで公式・コミュニティファームウェアを閲覧・ダウンロード",
+    "feature_burner": "ESP32/ESP32-S3 への .bin ワンクリック書き込み、シリアルコンソール対応",
+    "feature_dumper": "デバイスからファームウェアを読み取りバックアップ",
+    "feature_utilities": "ファームウェア解析、パーティション編集、シリアルモニターなどのツール",
+    "for_developers_title": "開発者向け",
+    "for_developers_desc": "独自のファームウェアソースやワークフローが必要な場合：",
+    "for_developers_1": "マニフェストは GitHub Releases とリポジトリファイルツリーから取得。LILYGO の .bin は各製品リポジトリでホスト",
+    "for_developers_2": "設定 → 詳細設定 でローカル manifest JSON を指定し、ネットワーク取得をオーバーライド可能",
+    "for_developers_3": "コントリビューション・フィードバック歓迎",
+    "link_repo": "リポジトリ",
+    "link_releases": "Releases",
+    "open_source": "オープンソース。",
+    "open_source_link": "GitHub でコントリビューション・フィードバック"
   },
   "firmwareCenter": {
     "only_with_firmware": "ファームウェアがある製品のみ表示",
